skillz-prod-blue/moodle.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skillz-prod-blue
  labels:
    domain: skillz
    environment: prod
    color: blue
    owner: devops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: skillz-prod-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - image: ghcr.io/cybe-asia/digital-school-moodle:latest
        imagePullPolicy: Always
        name: moodle
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/moodledata
          name: moodledata
        - mountPath: /var/www/html/config.php
          name: moodle-config
          subPath: config.php
        - mountPath: /etc/apache2/sites-available/000-default.conf
          name: apache-vhost
          subPath: 000-default.conf
      imagePullSecrets:
      - name: ghcr-secret
      volumes:
      - name: moodledata
        persistentVolumeClaim:
          claimName: moodle-pvc
      - configMap:
          name: moodle-config
        name: moodle-config
      - configMap:
          name: moodle-apache-vhost
        name: apache-vhost
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: skillz-prod-blue
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  - name: https
    port: 8443
    targetPort: 80
  selector:
    app: moodle
  type: ClusterIP
