skillz-prod-blue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle
  namespace: skillz-prod-blue
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - blue.skillz.cybe.tech
      secretName: skillz-prod-blue-tls
  rules:
  - host: blue.skillz.cybe.tech
    http:
      paths:
      - backend:
          service:
            name: moodle
            port:
              number: 8080
        path: /
        pathType: Prefix
